# anki-N2N

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_note_file.txt
src/: helpers.cpp  helpers.hpp  main.cpp
